--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-scrollmagic": "^1.2.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "gsap": "^3.0.5",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
